Fix workout deletion bug and add automatic update system
- Fix race condition in openWorkoutForDate that could erase workouts after editing exercises/templates
- Add service worker with automatic update detection and user prompts
- Add cache control headers to ensure fresh updates
- Remove stale getFreshDays function that caused closure issues

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "PBTrackPro",
   "short_name": "PBTrack",
+  "version": "1.0.0",
   "description": "Track your workout sessions and personal bests",
   "start_url": "/",
   "display": "standalone",
